Fixed Visual bug at the right to flicker default name.

--- a/frontend/src/pages/css/StudentDashboard.css
+++ b/frontend/src/pages/css/StudentDashboard.css
@@ -49,6 +49,8 @@ body {
 }
 .welcome-message {
     font-size: 1.2em;
+    min-width: 250px;
+    text-align: right;
     font-weight: bold;
 }
 /* Sidebar and Main container */
